Fixed Navbar Collapse after color
Text was not visable on nav-links after navbar collapses.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -76,4 +76,6 @@
     background-color: #fff !important;
 }
 
-  
+.navbar-collapse::after {
+  background-color: #073138 !important;
+}
